feat: add Excel import/export functionality to template editor
- Introduce new modal dialog for Excel paste operations with proper styling
- Add input-span class for consistent input field sizing
- Implement template_excel_export.js for handling table export to HTML/TSV
- Add templateExcelImport namespace with buildTemplateConfigFromExcelHtml function
- Include new script in index.html and index.inline.html
- Support parsing Excel-like HTML tables with merged cells and styling
- Add functionality to clean and clone tables for export operations

--- a/web/index.html
+++ b/web/index.html
@@ -207,6 +207,7 @@
     <script src="js/sample.js"></script>
     <script src="js/table_renderer.js"></script>
     <script src="js/template_converter.js"></script>
+    <script src="js/template_excel_export.js"></script>
     <script src="js/ui_core.js"></script>
     <script src="js/ui_abap_markers.js"></script>
     <script src="js/ui_anno.js"></script>
